--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,1 @@
-{"workbench.colorCustomizations":{"titleBar.activeForeground":"#ddd","titleBar.activeBackground":"#ab0000","activityBar.background":"#5e0b0b","statusBar.background":"#111","statusBar.foreground":"#ccc"}}
+{"workbench.colorCustomizations":{"titleBar.activeForeground":"#fff","titleBar.activeBackground":"#00994d","activityBar.background":"#004d26","statusBar.background":"#111","statusBar.foreground":"#ccc"}}
